Fixed z-index issue

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -87,6 +87,7 @@ header
 					margin: -2px 0 0 -3px
 					border: none
 					background-color: transparent
+					cursor: pointer
 				>div
 					float: left
 					width: 212px
@@ -186,6 +187,7 @@ nav
 			ul
 				display: none
 				position: absolute
+				z-index: 1
 				line-height: 2em
 				margin: 0 -18px
 				width: 100%
@@ -299,6 +301,8 @@ footer
 				padding: 3px 8px
 			div
 				display: none
+				position: relative
+				z-index: 1
 				background: #F79B34
 				font-family: CaviarDreams
 				max-height: 200px
